# speedsouls-rust

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
src/: main.rs
src/api/: mod.rs  speedrundotcom.rs
src/components/: categories_list.rs  categories_list_item.rs  footer.rs  game_list.rs  game_list_item.rs  mod.rs  navbar.rs  replace.rs  theme_button.rs
src/components/heroicons/: mod.rs
src/components/heroicons/mini/: arrow_right.rs  mod.rs  moon.rs  sun.rs
src/components/heroicons/outline/: arrow_right.rs  mod.rs
src/hooks/: mod.rs  use_dark.rs  use_local_storage.rs
src/layouts/: default.rs  mod.rs
src/pages/: home.rs  mod.rs
src/pages/leaderboards/: category.rs  category_redirect.rs  game.rs  games.rs  home.rs  mod.rs
src/types/: mod.rs  routes.rs
src/types/speedrundotcom/: category.rs  game.rs  leaderboard.rs  mod.rs  response.rs
